# eCMUAP-Interface

./: .gitignore  NeuroNexus_H32_interp_probe.json  README.md  pyproject.toml
examples/basic/: 001_trigger.py  002_eEMGview.py  003_eCMUAPview.py  004_HD_emg.py  005_emg_interpolate.py  006_spatial_filter.py  007_spatial_filter_comparison.py  008_spatial_filter_animation.py  009_conduction_velocity.py  010_epoch_rejection.py  011_amplitude_maps.py  012_export_metrics.py  012_metrics.csv
examples/data/: results_IB2.csv
examples/notebooks/: 01_single_channel_eCMUAP.ipynb  02_HD_emg.ipynb  03_conduction_velocity.ipynb  04_full_pipeline.ipynb
playground/EMGprobes/: 001_test_probe_interface.py  002_test_neuronexus_H32.py  003_test_HD_emg.py  004_test_neuronexus_H32_interp.py
playground/spatial_filter/: 001_kernel_math_check.py  002_visual_check.py
playground/velocity/: 001_propagation_velocity.py  002_velocity_real_data.py
src/ecmuap_interface/: experiment.py
src/ecmuap_interface/core/: HD_emg.py  eCMUAP.py  emg_data.py
src/ecmuap_interface/probe_lib/: get_probes.py
src/ecmuap_interface/probe_lib/probes/: NeuroNexus_H32_probe.json
src/ecmuap_interface/utils/: export.py  filters.py  filters_jax.py  functions.py  loaders.py  probes.py  spatial_filters.py  trigger.py  velocity.py
src/ecmuap_interface/views/: HDemg_view.py  eCMUAP_view.py  emg_channel_view.py  emg_view.py
tests/: test_emg_data.py  test_epoch_rejection.py  test_spatial_filters.py  test_velocity.py
