[project]
name = "ecmuap-interface"
version = "0.1.0"
description = ""
authors = [
    {name = "louisreg",email = "l.regnacq@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy (>=2.4.1,<3.0.0)",
    "scipy (>=1.17.0,<2.0.0)",
    "matplotlib (>=3.10.8,<4.0.0)",
    "pandas (>=3.0.0,<4.0.0)",
    "probeinterface (>=0.3.1,<0.4.0)",
    "tables (>=3.10.2,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)"
]

[project.optional-dependencies]
# CPU-only JAX (fast adaptive filters):  pip install "ecmuap-interface[jax]"
# GPU (NVIDIA):                           pip install "ecmuap-interface[jax-gpu]"
jax     = ["jax>=0.4", "jaxlib>=0.4"]
jax-gpu = ["jax[cuda12_pip]>=0.4"]

[tool.poetry]
packages = [{include = "ecmuap_interface", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
